--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,32 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
+# theme: minima
+# plugins:
+#   - jekyll-feed
+
+# Build settings
+defaults:
+  - scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: blocks
+      page_sections:
+        - template: navigation-header-w-button
+          block: header-2
+          logo: "/uploads/2018/06/21/forestry-full.svg"
+          navigation:
+            - link: "/"
+              link_text: Home
+        - template: post-content
+          block: post-content
+        - template: simple-footer
+          block: footer-1
+          content: Made with ❤︎ in Canada
+
 plugins:
   - jekyll-feed
+  - jekyll-menus
 
 # Exclude from processing.
 # The following items will not be processed, by default.
