add footer config to default layout

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,19 @@ defaults:
           email_recipient: example@email.com
         - template: simple-footer
           block: footer-1
-          content: Footer content here
+          links:
+            - icon: "/uploads/images/github.svg"
+              url: "https://github.com/adamking0126"
+              alt_text: "github"
+            - icon: "/uploads/images/substack.png"
+              url: "https://adamking0126.substack.com/"
+              alt_text: "substack"
+            - icon: "/uploads/images/linkedin.png"
+              url: "https://www.linkedin.com/in/adamking0126/"
+              alt_text: "linkedin"
+            - icon: "/uploads/images/reddit.svg"
+              url: "https://www.reddit.com/user/adamking0126/"
+              alt_text: "reddit" 
 
 plugins:
   - jekyll-feed
