--- a/_config.yml
+++ b/_config.yml
@@ -38,17 +38,20 @@ defaults:
       page_sections:
         - template: navigation-header-w-button
           block: header-1
-          logo: "/uploads/2018/06/21/forestry-full.svg"
+          logo: "/uploads/images/logo-green.png"
+          site_title: FLOGGER
           navigation:
             - link: "/blog/"
               link_text: "Dev Blog Home"
+
         - template: post-content
           block: blog-post-content
+
         - template: cta-bar
           block: cta-bar
           headline: Get notified
-          content: Receive updates about new content, upcoming live streams, etc.  No spam.
-          email_recipient: example@email.com
+          content_file: content/receive-updates.md
+
         - template: simple-footer
           block: footer-1
           links:
